--- a/src/main/resources/templates/fragments/headerFragment.html
+++ b/src/main/resources/templates/fragments/headerFragment.html
@@ -23,45 +23,45 @@
 		<ul class="d-flex align-items-center">
 
 			<li class="mx-3 nav-item dropdown"><a class="nav-link" href="#" id="profileDropdown" role="button"
-					data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa-solid fa-bell"
-						style="font-size: 20px; margin-top: 7px; margin-right: 7px;"><span
-						th:if="${adminPendingProjectDefinitionCount > 0} or ${requestedCancellationsCount > 0} or ${interviewPendingApplicationsCount > 0} or ${countInterviewApplications > 0}"
-						class="notif-bell"></span> </i>
-				</a>
+												  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa-solid fa-bell"
+																														   style="font-size: 20px; margin-top: 7px; margin-right: 7px;"><span
+					th:if="${adminPendingProjectDefinitionCount > 0} or ${requestedCancellationsCount > 0} or ${interviewPendingApplicationsCount > 0} or ${countInterviewApplications > 0}"
+					class="notif-bell"></span> </i>
+			</a>
 
 				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
 
 					<li><a class="dropdown-item d-flex align-items-center"
-							th:href="@{/bisag/admin/intern_application}"> <i
-								class="fa-solid fa-list-check"></i> <span>Approve interns for interview
+						   th:href="@{/bisag/admin/intern_application}"> <i
+							class="fa-solid fa-list-check"></i> <span>Approve interns for interview
 							<span th:if="${interviewPendingApplicationsCount > 0}" class="notif"
-									th:text="${interviewPendingApplicationsCount}"></span>
+								  th:text="${interviewPendingApplicationsCount}"></span>
 							</span>
-						</a></li>
+					</a></li>
 
 					<li><a class="dropdown-item d-flex align-items-center"
-							th:href="@{/bisag/admin/intern_application/approved_interns}"> <i
-								class="fa-solid fa-list-check"></i> <span>Pending Interview interns
+						   th:href="@{/bisag/admin/intern_application/approved_interns}"> <i
+							class="fa-solid fa-list-check"></i> <span>Pending Interview interns
 								Applications <span th:if="${countInterviewApplications > 0}" class="notif"
-									th:text="${countInterviewApplications}"></span>
+												   th:text="${countInterviewApplications}"></span>
 							</span>
-						</a></li>
+					</a></li>
 
 					<li><a class="dropdown-item d-flex align-items-center"
-							th:href="@{/bisag/admin/admin_pending_def_approvals}"> <i class="fa fa-times"
-								aria-hidden="true"></i> <span>Pending Project Definitions <span
-									th:if="${adminPendingProjectDefinitionCount > 0}" class="notif"
-									th:text="${adminPendingProjectDefinitionCount}"></span>
+						   th:href="@{/bisag/admin/admin_pending_def_approvals}"> <i class="fa fa-times"
+																					 aria-hidden="true"></i> <span>Pending Project Definitions <span
+							th:if="${adminPendingProjectDefinitionCount > 0}" class="notif"
+							th:text="${adminPendingProjectDefinitionCount}"></span>
 							</span>
-						</a></li>
-						
-						<li><a class="dropdown-item d-flex align-items-center"
-							th:href="@{/bisag/admin/cancellation_requests}"> <i class="fa fa-times"
-								aria-hidden="true"></i> <span>Pending cancellation Requests <span
-									th:if="${requestedCancellationsCount > 0}" class="notif"
-									th:text="${requestedCancellationsCount}"></span>
+					</a></li>
+
+					<li><a class="dropdown-item d-flex align-items-center"
+						   th:href="@{/bisag/admin/cancellation_requests}"> <i class="fa fa-times"
+																			   aria-hidden="true"></i> <span>Pending cancellation Requests <span
+							th:if="${requestedCancellationsCount > 0}" class="notif"
+							th:text="${requestedCancellationsCount}"></span>
 							</span>
-						</a></li>
+					</a></li>
 				</ul>
 			</li>
 
@@ -73,25 +73,25 @@
 
 			<li class="nav-item dropdown">
 				<!-- Profile Dropdown --> <a class="nav-link dropdown-toggle" href="#" id="profileDropdown2"
-					role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<i class="fa-solid fa-user px-2"></i><span th:text="${admin != null ? admin.name : 'Admin'}"></span>
-
-				</a>
+											 role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<i class="fa-solid fa-user px-2"></i>
+				<span th:text="${admin != null ? admin.name : 'Admin'}"></span>
+			</a>
 				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown2">
 					<li><a class="dropdown-item d-flex align-items-center" th:href="@{/bisag/admin/admin_dashboard}"> <i
-								class="bi bi-person"></i> <span>My Profile</span>
-						</a></li>
+							class="bi bi-person"></i> <span>My Profile</span>
+					</a></li>
 
 					<li><a class="dropdown-item d-flex align-items-center" href="pages-faq.html"> <i
-								class="bi bi-question-circle"></i> <span>Need
+							class="bi bi-question-circle"></i> <span>Need
 								Help?</span>
-						</a></li>
+					</a></li>
 				</ul> <!-- End Profile Dropdown -->
 			</li>
 
 			<li><a class="text-white bg-danger lgout mx-4" th:href="@{/logout}"> <i class="fa fa-sign-out"
-						aria-hidden="true"></i> <span class="px-3 fw-bold">Logout</span>
-				</a></li>
+																					aria-hidden="true"></i> <span class="px-3 fw-bold">Logout</span>
+			</a></li>
 		</ul>
 	</nav>
 	<!-- End Icons Navigation -->
